Tests to be compatible with JDK 9+